--- a/src/output.css
+++ b/src/output.css
@@ -604,6 +604,10 @@ video {
   top: 50%;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
 .z-50 {
   z-index: 50;
 }
@@ -667,6 +671,10 @@ video {
 
 .mt-\[120px\] {
   margin-top: 120px;
+}
+
+.mt-9 {
+  margin-top: 2.25rem;
 }
 
 .block {
