--- a/style.css
+++ b/style.css
@@ -1,95 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.wh {
-  width: 200px;
-}
-
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
+.caerd {
+  position: relative;
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
+  pointer-events: auto;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.3rem;
+  outline: 0;
 }
 
-.modal-content {
-  background-color: #fefefe;
-  margin: 10% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-  max-width: 400px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+dd sdf dsasd .ddd {
+  position: relative;
+  width: auto;
+  margin: 0.5rem;
+  pointer-events: none;
+}
+.sdf {
+  display: flex;
+  align-items: center;
+  min-height: calc(100% - (0.5rem * 2));
 }
 
-.modal-header {
-  padding-bottom: 10px;
-  border-bottom: 1px solid #ccc;
-}
-
-.modal-header h2 {
-  margin: 0;
-  font-size: 20px;
-}
-
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 24px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.modal-body {
-  padding: 20px 0;
-}
-
-.modal-body input {
-  display: block;
-  width: calc(100% - 40px);
-  padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-
-.modal-footer {
-  overflow: hidden;
-}
-
-.modal-footer button {
-  float: right;
-  padding: 10px 20px;
-  background-color: #4caf50;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.modal-footer button:hover {
-  background-color: #45a049;
-}
-
-#x {
-  cursor: pointer;
-  padding: 20px;
-  color: red;
-  font-size: 25px;
-  text-align: center;
+.dsasd {
+  max-width: 800px;
 }
